--- a/index.html
+++ b/index.html
@@ -80,61 +80,59 @@
         <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
       </div>
       <div class="input-group">
-        <span class="input-group-text" id="inputGroup-sizing-default">12</span>
+        <span class="input-group-text" id="inputGroup-sizing-default">13</span>
         <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
       </div>
       <div class="input-group">
-        <span class="input-group-text" id="inputGroup-sizing-default">1</span>
+        <span class="input-group-text" id="inputGroup-sizing-default">14</span>
         <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
       </div>
       <div class="input-group">
-        <span class="input-group-text" id="inputGroup-sizing-default">2</span>
+        <span class="input-group-text" id="inputGroup-sizing-default">15</span>
         <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
       </div>
       <div class="input-group">
-        <span class="input-group-text" id="inputGroup-sizing-default">3</span>
+        <span class="input-group-text" id="inputGroup-sizing-default">16</span>
         <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
       </div>
       <div class="input-group">
-        <span class="input-group-text" id="inputGroup-sizing-default">4</span>
+        <span class="input-group-text" id="inputGroup-sizing-default">17</span>
         <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
       </div>
       <div class="input-group">
-        <span class="input-group-text" id="inputGroup-sizing-default">5</span>
+        <span class="input-group-text" id="inputGroup-sizing-default">18</span>
         <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
       </div>
       <div class="input-group">
-        <span class="input-group-text" id="inputGroup-sizing-default">6</span>
+        <span class="input-group-text" id="inputGroup-sizing-default">19</span>
         <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
       </div>
       <div class="input-group">
-        <span class="input-group-text" id="inputGroup-sizing-default">7</span>
+        <span class="input-group-text" id="inputGroup-sizing-default">20</span>
         <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
       </div>
       <div class="input-group">
-        <span class="input-group-text" id="inputGroup-sizing-default">8</span>
+        <span class="input-group-text" id="inputGroup-sizing-default">21</span>
         <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
       </div>
       <div class="input-group">
-        <span class="input-group-text" id="inputGroup-sizing-default">9</span>
+        <span class="input-group-text" id="inputGroup-sizing-default">22</span>
         <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
       </div>
       <div class="input-group">
-        <span class="input-group-text" id="inputGroup-sizing-default">10</span>
+        <span class="input-group-text" id="inputGroup-sizing-default">23</span>
         <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
       </div>
       <div class="input-group">
-        <span class="input-group-text" id="inputGroup-sizing-default">11</span>
+        <span class="input-group-text" id="inputGroup-sizing-default">24</span>
         <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
       </div>
-      <div class="input-group">
-        <span class="input-group-text" id="inputGroup-sizing-default">12</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
-      </div>
+
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./Assets/script.js"></script>
   </body>
 </html>
 
