added save button

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./Assets/style.css" />
+    <script src="https://kit.fontawesome.com/8eeec01ced.js" crossorigin="anonymous"></script>
     <title>Work Day Scheduler</title>
   </head>
 
@@ -29,103 +30,103 @@
       <!-- Timeblocks go here -->
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">12</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">1</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">2</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">3</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group ">
         <span class="input-group-text" id="inputGroup-sizing-default">4</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">5</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">6</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">7</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">8</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">9</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">10</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">11</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">12</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">13</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">14</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">15</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">16</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">17</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">18</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">19</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">20</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">21</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">22</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">23</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">24</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button><i class="fas fa-save fa-3x"></i></button>
       </div>
 
     </div>
