struggling with the color changes code is sloppy - will try again to see if I can get it

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./Assets/style.css" />
-    <script src="https://kit.fontawesome.com/8eeec01ced.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://kit.fontawesome.com/8eeec01ced.js" crossorigin="anonymous"></script> -->
     <title>Work Day Scheduler</title>
   </head>
 
@@ -28,10 +28,7 @@
     </header>
     <div class="container mt-4">
       <!-- Timeblocks go here -->
-      <div class="input-group">
-        <span class="input-group-text" id="inputGroup-sizing-default">12</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
-      </div>
+
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">1</span>
         <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
