fixed the color coding - finally - and cleaned up some html.  readme to be added next

--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
       crossorigin="anonymous"
     />
     <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
+      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="./Assets/style.css" />
-    <!-- <script src="https://kit.fontawesome.com/8eeec01ced.js" crossorigin="anonymous"></script> -->
+    <script src="https://kit.fontawesome.com/8eeec01ced.js" crossorigin="anonymous"></script>
     <title>Work Day Scheduler</title>
   </head>
 
@@ -30,99 +28,99 @@
       <!-- Timeblocks go here -->
 
       <div class="input-group">
-        <span class="input-group-text" id="inputGroup-sizing-default">1</span>
+        <span class="input-group-text" id="inputGroup-sizing-default">1 AM</span>
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
+      </div> 
+      <div class="input-group">
+        <span class="input-group-text" id="inputGroup-sizing-default">2 AM</span>
         <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
-        <span class="input-group-text" id="inputGroup-sizing-default">2</span>
+        <span class="input-group-text" id="inputGroup-sizing-default">3 AM</span>
         <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
-        <span class="input-group-text" id="inputGroup-sizing-default">3</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
-      </div>
-      <div class="input-group ">
-        <span class="input-group-text" id="inputGroup-sizing-default">4</span>
+        <span class="input-group-text" id="inputGroup-sizing-default">4 AM</span>
         <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
-        <span class="input-group-text" id="inputGroup-sizing-default">5</span>
+        <span class="input-group-text" id="inputGroup-sizing-default">5 AM</span>
         <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
-        <span class="input-group-text" id="inputGroup-sizing-default">6</span>
+        <span class="input-group-text" id="inputGroup-sizing-default">6 AM</span>
         <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
-        <span class="input-group-text" id="inputGroup-sizing-default">7</span>
+        <span class="input-group-text" id="inputGroup-sizing-default">7 AM</span>
         <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
-        <span class="input-group-text" id="inputGroup-sizing-default">8</span>
+        <span class="input-group-text" id="inputGroup-sizing-default">8 AM</span>
         <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
-        <span class="input-group-text" id="inputGroup-sizing-default">9</span>
+        <span class="input-group-text" id="inputGroup-sizing-default">9 AM</span>
         <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
-        <span class="input-group-text" id="inputGroup-sizing-default">10</span>
+        <span class="input-group-text" id="inputGroup-sizing-default">10 AM</span>
         <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
-        <span class="input-group-text" id="inputGroup-sizing-default">11</span>
+        <span class="input-group-text" id="inputGroup-sizing-default">11 AM</span>
         <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
-        <span class="input-group-text" id="inputGroup-sizing-default">12</span>
+        <span class="input-group-text" id="inputGroup-sizing-default">12 PM</span>
         <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
-        <span class="input-group-text" id="inputGroup-sizing-default">13</span>
+        <span class="input-group-text" id="inputGroup-sizing-default">1 PM</span>
         <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
-        <span class="input-group-text" id="inputGroup-sizing-default">14</span>
+        <span class="input-group-text" id="inputGroup-sizing-default">2 PM</span>
         <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
-        <span class="input-group-text" id="inputGroup-sizing-default">15</span>
+        <span class="input-group-text" id="inputGroup-sizing-default">3 PM</span>
         <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
-        <span class="input-group-text" id="inputGroup-sizing-default">16</span>
+        <span class="input-group-text" id="inputGroup-sizing-default">4 PM</span>
         <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
-        <span class="input-group-text" id="inputGroup-sizing-default">17</span>
+        <span class="input-group-text" id="inputGroup-sizing-default">5 PM</span>
         <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
-        <span class="input-group-text" id="inputGroup-sizing-default">18</span>
+        <span class="input-group-text" id="inputGroup-sizing-default">6 PM</span>
         <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
-        <span class="input-group-text" id="inputGroup-sizing-default">19</span>
+        <span class="input-group-text" id="inputGroup-sizing-default">7 PM</span>
         <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
-        <span class="input-group-text" id="inputGroup-sizing-default">20</span>
+        <span class="input-group-text" id="inputGroup-sizing-default">8 PM</span>
         <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
-        <span class="input-group-text" id="inputGroup-sizing-default">21</span>
+        <span class="input-group-text" id="inputGroup-sizing-default">9 PM</span>
         <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
-        <span class="input-group-text" id="inputGroup-sizing-default">22</span>
+        <span class="input-group-text" id="inputGroup-sizing-default">10 PM</span>
         <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
-        <span class="input-group-text" id="inputGroup-sizing-default">23</span>
+        <span class="input-group-text" id="inputGroup-sizing-default">11 PM</span>
         <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
-        <span class="input-group-text" id="inputGroup-sizing-default">24</span>
+        <span class="input-group-text" id="inputGroup-sizing-default">12 AM</span>
         <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
       </div>
 
