converted some code to JQuery and added images and readme

--- a/index.html
+++ b/index.html
@@ -29,99 +29,99 @@
 
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">1 AM</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveBtn"><i class="fas fa-save fa-3x"></i></button>
       </div> 
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">2 AM</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveBtn"><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">3 AM</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveBtn"><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">4 AM</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveBtn"><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">5 AM</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveBtn"><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">6 AM</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveBtn"><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">7 AM</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveBtn"><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">8 AM</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveBtn"><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">9 AM</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveBtn"><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">10 AM</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveBtn"><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">11 AM</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveBtn"><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">12 PM</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveBtn"><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">1 PM</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveBtn"><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">2 PM</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveBtn"><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">3 PM</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveBtn"><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">4 PM</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveBtn"><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">5 PM</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveBtn"><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">6 PM</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveBtn"><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">7 PM</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveBtn"><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">8 PM</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveBtn"><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">9 PM</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveBtn"><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">10 PM</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveBtn"><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">11 PM</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveBtn"><i class="fas fa-save fa-3x"></i></button>
       </div>
       <div class="input-group">
         <span class="input-group-text" id="inputGroup-sizing-default">12 AM</span>
-        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveButton"><i class="fas fa-save fa-3x"></i></button>
+        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"><button class="saveBtn"><i class="fas fa-save fa-3x"></i></button>
       </div>
 
     </div>
